--- a/metrics/web/web/index.html
+++ b/metrics/web/web/index.html
@@ -20,17 +20,17 @@
 <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-auth.js"></script>
 
 <script>
-    var firebaseConfig = {
-        apiKey: "AIzaSyAqPhBtEHjo4MtfKRSbqWOCj-rfO0e5r5M",
-        authDomain: "metrics-test-25d15.firebaseapp.com",
-        databaseURL: "https://metrics-test-25d15.firebaseio.com",
-        projectId: "metrics-test-25d15",
-        storageBucket: "metrics-test-25d15.appspot.com",
-        messagingSenderId: "1036626867269",
-        appId: "1:1036626867269:web:0ac60508cdf8ba3f7d5f2c",
-        measurementId: "G-RRGF6QZ6RV"
-    };
-    firebase.initializeApp(firebaseConfig);
+  var firebaseConfig = {
+    apiKey: "AIzaSyCkM-7WEAb9GGCjKQNChi5MD2pqrcRanzo",
+    authDomain: "metrics-d9c67.firebaseapp.com",
+    databaseURL: "https://metrics-d9c67.firebaseio.com",
+    projectId: "metrics-d9c67",
+    storageBucket: "metrics-d9c67.appspot.com",
+    messagingSenderId: "650500796855",
+    appId: "1:650500796855:web:65a4615a28f3d88e8bb832",
+    measurementId: "G-3DB4JFLKHQ"
+  };
+  firebase.initializeApp(firebaseConfig);
 </script>
 
 <script src="main.dart.js" type="application/javascript"></script>
